--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "67c295ba",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5a984f0b",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kristian/.local/lib/python3.11/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
       "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
      ]
     },
@@ -111,33 +111,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[[ 1.7961e-01,  5.8380e-01,  7.3720e-01,  ...,  8.7482e-01,\n",
-      "            1.0781e+00,  1.4031e+00],\n",
-      "          [ 1.4914e-01,  1.8723e-01,  2.3184e-01,  ...,  1.2077e+00,\n",
-      "            3.9147e-01,  1.7680e-01],\n",
-      "          [ 5.6973e-01,  6.5522e-01,  9.0722e-01,  ...,  8.8139e-01,\n",
-      "           -7.5916e-03,  6.5021e-01],\n",
+      "tensor([[[[-0.1735,  1.3608, -0.5569,  ...,  0.4138, -1.2697,  1.4504],\n",
+      "          [ 0.9092,  1.4605, -1.5454,  ...,  0.1866,  0.7423,  0.7390],\n",
+      "          [-1.4064,  0.6028, -0.0883,  ...,  0.5749,  0.0245,  0.3559],\n",
       "          ...,\n",
-      "          [ 4.8358e-01,  6.8153e-01, -5.7561e-01,  ...,  2.9997e-01,\n",
-      "           -1.3754e-01,  5.0778e-02],\n",
-      "          [ 6.0585e-01,  3.9180e-01, -1.2003e-01,  ...,  7.4532e-01,\n",
-      "            1.0719e-01,  7.9113e-01],\n",
-      "          [ 7.2439e-01, -2.2501e-02,  5.5179e-01,  ...,  5.2347e-01,\n",
-      "            1.4869e+00,  1.4965e-01]],\n",
+      "          [ 0.2521, -0.0932,  0.7357,  ..., -0.5910,  0.1675, -0.2962],\n",
+      "          [-0.3453,  0.7124,  0.6962,  ...,  0.4802, -0.7110,  0.0048],\n",
+      "          [ 0.0724, -0.0707,  1.1107,  ...,  0.6663,  1.1248, -0.9702]],\n",
       "\n",
-      "         [[ 1.4314e+00, -2.7129e-01,  1.7169e+00,  ...,  3.1603e-01,\n",
-      "            1.6929e+00,  6.7742e-01],\n",
-      "          [ 2.1997e-01, -5.0266e-01, -2.5307e-01,  ...,  1.7772e-01,\n",
-      "            9.9475e-01, -4.2054e-01],\n",
-      "          [ 8.6702e-01,  4.9469e-01,  1.2595e+00,  ...,  8.2479e-01,\n",
-      "            1.5853e+00,  1.4610e+00],\n",
+      "         [[ 0.3904, -0.2253, -1.9845,  ..., -2.1738, -0.8560, -0.7408],\n",
+      "          [-1.4031, -0.8858, -1.8994,  ...,  0.0403, -1.2398, -0.7838],\n",
+      "          [-1.2248, -0.9576, -0.8792,  ..., -0.5345, -0.1558, -1.8179],\n",
       "          ...,\n",
-      "          [-3.3688e-01,  5.9427e-01, -8.1464e-01,  ...,  3.4444e-01,\n",
-      "            9.5379e-01, -2.1438e-02],\n",
-      "          [ 1.3858e+00,  5.6206e-01,  4.0233e-01,  ...,  8.8865e-01,\n",
-      "            6.8523e-01,  1.2724e+00],\n",
-      "          [-5.0060e-01,  3.1925e-01, -1.9754e-03,  ...,  1.9972e+00,\n",
-      "            4.4303e-01, -1.2491e+00]]]], grad_fn=<ConvolutionBackward0>)\n",
+      "          [-1.7406, -0.7554, -0.7882,  ..., -2.5429, -1.0109, -1.6083],\n",
+      "          [-0.0935, -0.4155, -0.4309,  ..., -0.7168, -1.9295, -1.0563],\n",
+      "          [-1.6012, -0.5487, -0.9493,  ..., -1.1098, -0.9146, -1.9235]]]],\n",
+      "       grad_fn=<ConvolutionBackward0>)\n",
       "[ModuleList(\n",
       "  (0): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
