Add scale detector and presentation stub

--- a/notebooks/3-cristae-segmentation.ipynb
+++ b/notebooks/3-cristae-segmentation.ipynb
@@ -311,12 +311,7 @@
     "from src.visualization.analysis import show_mito_stats\n",
     "\n",
     "dataset = MitoSemsegDataset()\n",
-    "img, mask = [(255*x).squeeze().to(torch.uint8).numpy() for x in dataset[81]]\n",
-    " \n",
-    "stats = get_mito_stats(img,mask)\n",
-    "display(stats)\n",
-    "\n",
-    "show_mito_stats(img, stats)"
+    "img, mask = [(255*x).squeeze().to(torch.uint8).numpy() for x in dataset[81]]"
    ]
   },
   {
@@ -341,7 +336,7 @@
    ],
    "source": [
     "from functools import partial\n",
-    "from src.analysis.components import bottomhat, close_rc, area_filter, prune, close, fill_holes, contour_smoothing\n",
+    "from src.analysis.components import bottomhat, close_rc, area_filter, prune, close, holefill, contour_smoothing\n",
     "import ipywidgets as widgets\n",
     "\n",
     "@widgets.interact(sesize=(1,100,1),ksize=(1,100,2),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
@@ -363,7 +358,7 @@
     "\n",
     "        y = prune(y,15) # thin spur removal\n",
     "        y = close(y,3) # gap closing\n",
-    "        y = fill_holes(y)\n",
+    "        y = holefill(y)\n",
     "        y = area_filter(y,thres) # small component removal\n",
     "        \n",
     "        y = contour_smoothing(y,p)\n",
@@ -639,18 +634,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef9a24754e3e4f4295b79a044b4be432",
+       "model_id": "982d0c8f3645416b9ffa32fd143d8626",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=25, description='sesize', min=1), IntSlider(value=22, description='ksize…"
+       "interactive(children=(IntSlider(value=25, description='sesize', min=1), IntSlider(value=4, description='ksize1…"
       ]
      },
      "metadata": {},
@@ -658,10 +653,10 @@
     }
    ],
    "source": [
-    "from src.analysis.components import open_rc, close_rc, bottomhat, bottomhat_rc, area_filter, open, close, prune, fill_holes, contour_smoothing\n",
+    "from src.analysis.components import open_rc, close_rc, bottomhat, bottomhat_rc, area_filter, open, close, prune, holefill, contour_smoothing, dilate_rc\n",
     "\n",
-    "@widgets.interact(sesize=(1,100,1),ksize=(1,100,2),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
-    "def morph(sesize=25, ksize=22, type=cv.MORPH_ELLIPSE,low=0,up=65,thres=120,p=0.2):\n",
+    "@widgets.interact(sesize=(1,100,1),ksize1=(1,100),ksize2=(1,100),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
+    "def morph(sesize=25,ksize1=4,ksize2=10,type=cv.MORPH_ELLIPSE,low=0,up=65,thres=120,p=0.2):\n",
     "    mitos, masks = crop_all_mitos(img, mask)\n",
     "    i = 10\n",
     "    \n",
@@ -669,19 +664,28 @@
     "    m = cv.erode(m, kernel=cv.getStructuringElement(cv.MORPH_ELLIPSE,(25,25)))\n",
     "    x = cv.equalizeHist(mitos[i])\n",
     "    \n",
-    "    y = cv.equalizeHist(bottomhat(x, sesize, cv.MORPH_ELLIPSE))\n",
-    "    y = close_rc(y, 4, cv.MORPH_RECT) # pepper noise removal\n",
-    "\n",
-    "    y = cv.inRange(y,lowerb=low,upperb=up) # BW thresholding\n",
-    "    y = cv.bitwise_and(y,m) # remove outer membrane\n",
-    "\n",
-    "    y = prune(y,15) # thin spur removal\n",
-    "    y = close(y,3) # gap closing\n",
-    "    y = fill_holes(y)\n",
-    "    y = area_filter(y,thres) # small component removal\n",
+    "    y = close_rc(x, 4, cv.MORPH_RECT) # pepper noise removal\n",
     "    \n",
-    "    y = contour_smoothing(y,p)\n",
-    "    y = prune(y,15)\n",
+    "    kernel = cv.getStructuringElement(cv.MORPH_CROSS,(ksize2,ksize2))\n",
+    "    kernel = cv.bitwise_or(kernel, np.eye(ksize2, dtype=np.uint8))\n",
+    "    kernel = cv.bitwise_or(kernel, np.fliplr(np.eye(ksize2, dtype=np.uint8)))\n",
+    "    \n",
+    "    y = open_rc(y, kernel)\n",
+    "\n",
+    "    y1 = cv.equalizeHist(bottomhat(y, ksize1, type))\n",
+    "    y =  cv.equalizeHist(bottomhat_rc(y, ksize2, type))\n",
+    "    y = dilate_rc(marker=y, mask=y1)\n",
+    "\n",
+    "    # y = cv.inRange(y,lowerb=low,upperb=up) # BW thresholding\n",
+    "    # y = cv.bitwise_and(y,m) # remove outer membrane\n",
+    "\n",
+    "    # y = prune(y,15) # thin spur removal\n",
+    "    # y = close(y,3) # gap closing\n",
+    "    # y = holefill(y)\n",
+    "    # y = area_filter(y,thres) # small component removal\n",
+    "    \n",
+    "    # y = contour_smoothing(y,p)\n",
+    "    # y = prune(y,15)\n",
     "\n",
     "    plt.figure(figsize=(15,7))\n",
     "    plt.imshow(np.concatenate([x,y],axis=1),cmap='gray')"
