Add custom augmentations and mean/std solver

--- a/notebooks/4-pipeline-sandbox.ipynb
+++ b/notebooks/4-pipeline-sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,17 +301,13 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import cv2 as cv\n",
     "import torch\n",
     "from src.data.loaders import MitoSemsegDataset\n",
     "from src.analysis.components import get_mito_stats\n",
     "from src.visualization.analysis import show_mito_stats\n",
     "\n",
-    "dataset = MitoSemsegDataset()\n",
-    "img, mask = [(255*x).squeeze().to(torch.uint8).numpy() for x in dataset[81]]\n",
+    "dataset = MitoSemsegDataset(root=TRAIN_ROOT)\n",
+    "img, mask = dataset[81]\n",
     " \n",
     "stats = get_mito_stats(img,mask)\n",
     "display(stats)\n",
@@ -336,261 +332,44 @@
      "output_type": "stream",
      "text": [
       "(0.002053388090349076, 'micron')\n",
-      "2.8093020915985107\n",
+      "3.2048463821411133\n",
       "(0.002053388090349076, 'micron')\n",
-      "2.8643486499786377\n",
+      "2.952274799346924\n",
       "(0.002053388090349076, 'micron')\n",
-      "2.874626398086548\n",
+      "2.974174737930298\n",
       "(0.002053388090349076, 'micron')\n",
-      "2.835646867752075\n",
+      "2.931443214416504\n",
       "(0.002053388090349076, 'micron')\n",
-      "2.8344807624816895\n",
+      "3.0482490062713623\n",
       "(0.002053388090349076, 'micron')\n",
-      "3.0787408351898193\n",
+      "3.0029854774475098\n",
       "(0.002053388090349076, 'micron')\n",
-      "2.7400195598602295\n",
+      "2.9857547283172607\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.983595848083496\n",
+      "2.90026593208313\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.7927350997924805\n",
+      "2.913193464279175\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.8627214431762695\n",
+      "2.940903425216675\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.986017942428589\n",
+      "2.95538592338562\n",
       "(0.0016116035455278, 'micron')\n",
-      "3.1243960857391357\n",
+      "3.0055155754089355\n",
       "(0.0016116035455278, 'micron')\n",
-      "2.7887983322143555\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.8676533699035645\n",
-      "(0.002053388090349076, 'micron')\n",
-      "2.7722957134246826\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7864162921905518\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.756727695465088\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7657370567321777\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7481982707977295\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8263065814971924\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.843360662460327\n",
-      "(0.0016116035455278, 'micron')\n",
-      "3.1700809001922607\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8380768299102783\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8565216064453125\n",
-      "(1.0, 'pixel')\n",
-      "2.8868496417999268\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8761937618255615\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8795230388641357\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.036954164505005\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.910372018814087\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.252288341522217\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8384363651275635\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.7963218688964844\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.850677967071533\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8417348861694336\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.7948668003082275\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.7641451358795166\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.811063289642334\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.790536642074585\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.875966787338257\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8010804653167725\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8453428745269775\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8298752307891846\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.893505573272705\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.855558156967163\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.903364896774292\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8520545959472656\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8313217163085938\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7560832500457764\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8858392238616943\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7631185054779053\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.848121404647827\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.829838514328003\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.737266778945923\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7525997161865234\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8267557621002197\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7527384757995605\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7942888736724854\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.799931764602661\n",
-      "(0.0016116035455278, 'micron')\n",
-      "3.1957778930664062\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.7559709548950195\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.890507698059082\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.796142101287842\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.9331018924713135\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8262219429016113\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.917924165725708\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.797572374343872\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8601789474487305\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8414666652679443\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8605175018310547\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.800466537475586\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8352417945861816\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.9377353191375732\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.9739978313446045\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.9764490127563477\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.651909828186035\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.964576244354248\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.833911895751953\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.815417766571045\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.960256338119507\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.8616888523101807\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9297292232513428\n",
-      "(0.0016116035455278, 'micron')\n",
-      "2.900688409805298\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.100898504257202\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.945455551147461\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9547529220581055\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0154781341552734\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9193975925445557\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9168665409088135\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.4231934547424316\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.903653144836426\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0454039573669434\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0366756916046143\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.064958333969116\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0350821018218994\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.081637144088745\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0115437507629395\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0582215785980225\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.200479507446289\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0405471324920654\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9884214401245117\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0422911643981934\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0120034217834473\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.014756441116333\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.986748456954956\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.023650646209717\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.025493860244751\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.2670538425445557\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.8939783573150635\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9883739948272705\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9338226318359375\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.059563636779785\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.913217782974243\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.986607789993286\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9800961017608643\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.998453140258789\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9152767658233643\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9925687313079834\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.938509464263916\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.9907195568084717\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0079965591430664\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.965921640396118\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.991739511489868\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.0284059047698975\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.061652183532715\n",
-      "(0.001326259946949602, 'micron')\n",
-      "3.2412478923797607\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.941610813140869\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.989398717880249\n",
-      "(0.001326259946949602, 'micron')\n",
-      "2.947632074356079\n"
+      "3.1136293411254883\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m image \u001b[39m=\u001b[39m (\u001b[39m255\u001b[39m\u001b[39m*\u001b[39mimg)\u001b[39m.\u001b[39msqueeze()\u001b[39m.\u001b[39mto(torch\u001b[39m.\u001b[39muint8)\u001b[39m.\u001b[39mnumpy()\n\u001b[1;32m      7\u001b[0m t \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m----> 8\u001b[0m \u001b[39mprint\u001b[39m(detect_scale(image, reader))\n\u001b[1;32m      9\u001b[0m \u001b[39mprint\u001b[39m(time\u001b[39m.\u001b[39mtime()\u001b[39m-\u001b[39mt)\n",
+      "File \u001b[0;32m/data/mole/katajisto/mitotem/src/analysis/components.py:17\u001b[0m, in \u001b[0;36mdetect_scale\u001b[0;34m(img, reader)\u001b[0m\n\u001b[1;32m     15\u001b[0m kwidth \u001b[39m=\u001b[39m \u001b[39mbin\u001b[39m\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m8\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[39m# use wide structuring element to erase everything but scalebar\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m scalebar \u001b[39m=\u001b[39m open_rc(\u001b[39mbin\u001b[39;49m, cv\u001b[39m.\u001b[39;49mgetStructuringElement(cv\u001b[39m.\u001b[39;49mMORPH_RECT,(kwidth,\u001b[39m1\u001b[39;49m)))\n\u001b[1;32m     18\u001b[0m contours, _ \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mfindContours(scalebar, cv\u001b[39m.\u001b[39mRETR_EXTERNAL, cv\u001b[39m.\u001b[39mCHAIN_APPROX_SIMPLE)\n\u001b[1;32m     19\u001b[0m bar \u001b[39m=\u001b[39m contours[\u001b[39m0\u001b[39m]\n",
+      "File \u001b[0;32m/data/mole/katajisto/mitotem/src/analysis/components.py:80\u001b[0m, in \u001b[0;36mopen_rc\u001b[0;34m(img, kernel)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39marray_equal(marker, marker_old):\n\u001b[1;32m     79\u001b[0m     marker_old \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcopy(marker)\n\u001b[0;32m---> 80\u001b[0m     marker \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49mdilate(marker,kernel\u001b[39m=\u001b[39;49mse)\n\u001b[1;32m     81\u001b[0m     \u001b[39mif\u001b[39;00m binary:\n\u001b[1;32m     82\u001b[0m         marker \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mbitwise_and(marker,mask)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
