Change dataset and transforms to conform with torchvision transforms v2

--- a/notebooks/5-hpo.ipynb
+++ b/notebooks/5-hpo.ipynb
@@ -25,7 +25,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import random_split\n",
+    "from torch.utils.data import DataLoader\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "from ray import tune\n",
@@ -63,9 +63,10 @@
     "    else:\n",
     "        start_epoch = 1\n",
     "\n",
-    "    train_iter, val_iter = load_data_mitosemseg(batch_size=config['batch_size'],\n",
-    "                                                num_workers=num_workers,\n",
-    "                                                split=0.85)\n",
+    "    trainset, valset = load_data_mitosemseg(data_dir, split=0.85)\n",
+    "\n",
+    "    train_iter = DataLoader(trainset, config['batch_size'], shuffle=True, num_workers=num_workers)\n",
+    "    val_iter = DataLoader(valset, config['batch_size'], shuffle=False, num_workers=num_workers)\n",
     "\n",
     "    for epoch in range(start_epoch, max_epochs+1):\n",
     "        running_loss = 0.0\n",
