Create parameter tuning for manual cristae segmentation

--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "20aa15bf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "5a984f0b",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
       "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
       "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
      ]
@@ -32,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 2, 388, 388])\n",
+      "torch.Size([1, 2, 820, 820])\n",
       "[ModuleList(\n",
       "  (0): EncoderBlock(\n",
       "    (convblock): Sequential(\n",
@@ -134,7 +138,7 @@
     "from src.models.unet import UNet\n",
     "\n",
     "unet = UNet(64)\n",
-    "I = torch.randn((1,1,572,572))\n",
+    "I = torch.randn((1,1,1004,1004))\n",
     "unet.init_weights(I)\n",
     "print(unet(I).shape)\n",
     "print(list(unet.children()))"
@@ -142,47 +146,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "8fe43cdc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "def find_next_valid_size(size: int, kernel_size: int, depth: int) -> tuple:\n",
+    "    i = torch.arange(1,depth+1)\n",
+    "    shrinkage = sum((kernel_size-1)*2**i).item()\n",
+    "    total_shrinkage = 2*shrinkage + (kernel_size-1)*2**(depth+1)\n",
+    "    while True:\n",
+    "        size_after = size - shrinkage\n",
     "\n",
-    "def is_valid_size(size: int, ksize: int, depth: int):\n",
-    "    i = np.arange(1,depth+1)\n",
-    "    size_after = size - sum((ksize-1)*2**i)\n",
-    "\n",
-    "    if size_after <= 0:\n",
-    "        return False\n",
-    "\n",
-    "    return size_after % 2**depth == 0\n",
-    "\n",
-    "for k in range(2100):\n",
-    "    if is_valid_size(k, 3, 4):\n",
-    "        pass\n",
-    "        #print(k)"
+    "        if size_after % 2**depth == 0:\n",
+    "            return size, size-total_shrinkage\n",
+    "        size += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3195f43f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "(1004, 820)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_valid_size(256,4,4)"
+    "find_next_valid_size(1000,3,4)"
    ]
   }
  ],
