--- a/notebooks/3-cristae-segmentation.ipynb
+++ b/notebooks/3-cristae-segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/datapoints/__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torchvision/transforms/v2/__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -25,8 +36,8 @@
     "import cv2 as cv\n",
     "import torch\n",
     "from src.data.loaders import MitoSemsegDataset\n",
-    "from src.analysis.components import get_mito_stats, crop_all_mitos, get_cristae_mask\n",
-    "from src.visualization.analysis import show_mito_stats\n",
+    "from src.analysis.components import crop_all_mitos\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "dataset = MitoSemsegDataset(root=TRAIN_ROOT)\n",
     "img, mask = dataset[81]"
@@ -40,12 +51,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "800ab44744954f818a23525098bfa52b",
+       "model_id": "1254178ea102494e92bece3798e5b2f2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=25, description='sesize', min=1), IntSlider(value=22, description='ksize…"
+       "interactive(children=(IntSlider(value=25, description='sesize', min=1), IntSlider(value=12, description='ksize…"
       ]
      },
      "metadata": {},
@@ -54,11 +65,10 @@
    ],
    "source": [
     "from functools import partial\n",
-    "from src.analysis.components import bottomhat, close_rc, area_filter, prune, close, holefill, contour_smoothing\n",
-    "import ipywidgets as widgets\n",
+    "from src.analysis.components import bottomhat, close_rc, area_filter, prune, close, holefill, contour_smoothing, open_rc\n",
     "\n",
-    "@widgets.interact(sesize=(1,100,1),ksize=(1,100,2),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
-    "def plot(sesize=25, ksize=22, type=cv.MORPH_ELLIPSE,low=0,up=65,thres=120,p=0.2):\n",
+    "@widgets.interact(sesize=(1,100,1),ksize=(1,100,1),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
+    "def plot(sesize=25, ksize=12, type=cv.MORPH_ELLIPSE,low=0,up=65,thres=120,p=0.2):\n",
     "    mitos, masks = crop_all_mitos(img, mask)\n",
     "    imasks = [cv.bitwise_not(m) for m in masks]\n",
     "    masks = [cv.erode(m, kernel=cv.getStructuringElement(cv.MORPH_ELLIPSE,(25,25))) for m in masks]\n",
@@ -93,6 +103,13 @@
     "        ax[0,i].axis('off'), ax[1,i].axis('off')\n",
     "        ax[0,i].imshow(np.bitwise_or(mitos[i],imasks[i]), cmap='gray')\n",
     "        ax[1,i].imshow(cristae[i], cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notch filter design"
    ]
   },
   {
@@ -179,6 +196,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Anisotropic diffusion test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -218,6 +242,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Canny edge detector test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -251,19 +282,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Morphology pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f12bdd46e8a84be38066a5679b8c2191",
+       "model_id": "14d98a12576b40ed8d1b84ff07109ba9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=25, description='sesize', min=1), IntSlider(value=4, description='ksize1…"
+       "interactive(children=(IntSlider(value=37, description='sesize', min=1), IntSlider(value=41, description='ksize…"
       ]
      },
      "metadata": {},
@@ -271,39 +309,45 @@
     }
    ],
    "source": [
-    "from src.analysis.components import open_rc, close_rc, bottomhat, bottomhat_rc, area_filter, open, close, prune, holefill, contour_smoothing, dilate_rc\n",
+    "from src.analysis.components import open_rc, close_rc, bottomhat, bottomhat_rc, area_filter, open, close, prune, holefill, contour_smoothing, dilate_rc, double_threshold, erode_rc, seq_line_open_rc, dilate\n",
     "\n",
-    "@widgets.interact(sesize=(1,100,1),ksize1=(1,100),ksize2=(1,100),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,1.,0.01))\n",
-    "def morph(sesize=25,ksize1=4,ksize2=10,type=cv.MORPH_ELLIPSE,low=0,up=65,thres=120,p=0.2):\n",
+    "@widgets.interact(sesize=(1,100,1),ksize1=(1,200,2),ksize2=(1,200,2),type=[('cross',cv.MORPH_CROSS),('disc',cv.MORPH_ELLIPSE),('rect',cv.MORPH_RECT)],low=(0,255),up=(0,255),thres=(0,500),p=(0.01,100.,0.01))\n",
+    "def morph(sesize=37,ksize1=41,ksize2=5,type=cv.MORPH_ELLIPSE,low=13,up=73,thres=87,p=0.149):\n",
     "    mitos, masks = crop_all_mitos(img, mask)\n",
     "    i = 10\n",
-    "    \n",
+    "\n",
     "    m = masks[i]\n",
-    "    m = cv.erode(m, kernel=cv.getStructuringElement(cv.MORPH_ELLIPSE,(25,25)))\n",
+    "    m = cv.erode(m, kernel=cv.getStructuringElement(cv.MORPH_ELLIPSE,(41,41)))\n",
     "    x = cv.equalizeHist(mitos[i])\n",
-    "    \n",
-    "    y = close_rc(x, 4, cv.MORPH_RECT) # pepper noise removal\n",
-    "    \n",
-    "    kernel = cv.getStructuringElement(cv.MORPH_CROSS,(ksize2,ksize2))\n",
-    "    kernel = cv.bitwise_or(kernel, np.eye(ksize2, dtype=np.uint8))\n",
-    "    kernel = cv.bitwise_or(kernel, np.fliplr(np.eye(ksize2, dtype=np.uint8)))\n",
-    "    \n",
-    "    y = open_rc(y, kernel)\n",
+    "   \n",
+    "    y = np.copy(x)\n",
+    "    #y = seq_line_open_rc(y, ksize2)\n",
     "\n",
-    "    y1 = cv.equalizeHist(bottomhat(y, ksize1, type))\n",
-    "    y =  cv.equalizeHist(bottomhat_rc(y, ksize2, type))\n",
-    "    y = dilate_rc(marker=y, mask=y1)\n",
-    "\n",
-    "    # y = cv.inRange(y,lowerb=low,upperb=up) # BW thresholding\n",
-    "    # y = cv.bitwise_and(y,m) # remove outer membrane\n",
-    "\n",
-    "    # y = prune(y,15) # thin spur removal\n",
-    "    # y = close(y,3) # gap closing\n",
-    "    # y = holefill(y)\n",
-    "    # y = area_filter(y,thres) # small component removal\n",
+    "    marker = cv.GaussianBlur(y,(65,65),0)-cv.GaussianBlur(y,(101,101),0)\n",
     "    \n",
+    "    y = cv.equalizeHist(bottomhat(y, 30)) # shading correction\n",
+    "\n",
+    "    #y = cv.equalizeHist(bottomhat_rc(y, 21)) # shading correction\n",
+    "    \n",
+    "    #y = seq_line_open_rc(y,ksize2)\n",
+    "    #y = cv.medianBlur(y,5)\n",
+    "    #y = cv.inRange(y,low,up)    \n",
+    "    y = cv.bitwise_or(y, cv.bitwise_not(m)) # remove outer membrane\n",
+    "\n",
+    "    \n",
+    "    y = double_threshold(y, low, up)\n",
+    "\n",
+    "    y = area_filter(y,thres) # small component removal\n",
+    "    #y = prune(y,26)\n",
+    "    y = close(y,3)\n",
+    "    contours,_ = cv.findContours(y, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_NONE)\n",
+    "    \n",
+    "    \n",
+    "    y = np.zeros_like(y)\n",
+    "    y = cv.drawContours(y, contours, -1, 255, cv.FILLED)\n",
+    "    # y = close_rc(y,ksize2)\n",
+    "    #y = holefill(y)\n",
     "    # y = contour_smoothing(y,p)\n",
-    "    # y = prune(y,15)\n",
     "\n",
     "    plt.figure(figsize=(15,7))\n",
     "    plt.imshow(np.concatenate([x,y],axis=1),cmap='gray')"
