--- a/notebooks/5-hpo.ipynb
+++ b/notebooks/5-hpo.ipynb
@@ -27,11 +27,11 @@
     "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader\n",
     "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
+    "import torchvision.transforms.v2 as T\n",
     "from ray import tune\n",
     "from ray.air import Checkpoint, session\n",
     "from ray.tune.schedulers import ASHAScheduler\n",
-    "from src.models.networks import UNet\n",
+    "from src.models.unet import UNet, find_next_valid_size\n",
     "from src.data.loaders import load_data_mitosemseg"
    ]
   },
@@ -41,8 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_unet(config, num_workers=0, max_epochs=100):\n",
-    "    net = UNet(encoder_depth=config['encoder_depth'])\n",
+    "def train_unet(data_dir, config, num_workers=0, max_epochs=100):\n",
+    "    net = UNet(encoder_depth=config['encoder_depth'],\n",
+    "               dropout=config['dropout'])\n",
     "\n",
     "    device = torch.device('cpu')\n",
     "    if torch.cuda.is_available():\n",
@@ -63,7 +64,10 @@
     "    else:\n",
     "        start_epoch = 1\n",
     "\n",
-    "    trainset, valset = load_data_mitosemseg(data_dir, split=0.85)\n",
+    "    input_size, output_size = find_next_valid_size(1000, 3, config['encoder_depth'])\n",
+    "    centercrop = T.CenterCrop(output_size)\n",
+    "\n",
+    "    trainset, valset = load_data_mitosemseg(data_dir, input_size, split=0.85)\n",
     "\n",
     "    train_iter = DataLoader(trainset, config['batch_size'], shuffle=True, num_workers=num_workers)\n",
     "    val_iter = DataLoader(valset, config['batch_size'], shuffle=False, num_workers=num_workers)\n",
@@ -72,8 +76,9 @@
     "        running_loss = 0.0\n",
     "        epoch_steps = 0\n",
     "        for i, (inputs, targets) in enumerate(train_iter,1):\n",
+    "            targets = centercrop(targets)\n",
     "            inputs, targets = inputs.to(device), targets.to(device)\n",
-    "\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
     "\n",
     "            outputs = net(inputs)\n",
@@ -93,6 +98,7 @@
     "        correct = 0\n",
     "        for i, (inputs, targets) in enumerate(val_iter, 1):\n",
     "            with torch.no_grad():\n",
+    "                targets = centercrop(targets)\n",
     "                inputs, targets = inputs.to(device), targets.to(device)\n",
     "\n",
     "                ouputs = net(inputs)\n",
@@ -127,8 +133,9 @@
     "def main(num_samples=10, max_num_epochs=10, gpus_per_trial=2):\n",
     "    config = {\n",
     "        \"lr\": tune.loguniform(1e-4, 1e-1),\n",
-    "        \"batch_size\": tune.choice([2**x for x in range(6)]),\n",
-    "        \"encoder_depth\": tune.choice(range(3,8)),\n",
+    "        \"batch_size\": tune.choice([1,2,4]),\n",
+    "        \"encoder_depth\": tune.choice(range(3,5)),\n",
+    "        \"dropout\": tune.uniform(0.0,0.5),\n",
     "    }\n",
     "\n",
     "    scheduler = ASHAScheduler(\n",
