--- a/reports/presentation.ipynb
+++ b/reports/presentation.ipynb
@@ -69,6 +69,18 @@
     }
    },
    "source": [
+    "## Convnets\n",
+    "- Multilayer trainable filters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Softmax\n",
     "$$\\mathbf{\\hat{y}} = \\mathrm{softmax}(\\mathbf{o}) \\ \\ \\mathrm{where} \\ \\ \\hat{y}_{i} = \\frac{\\mathrm{exp}(o_i)}{\\sum_{j} \\mathrm{exp}(o_{j})}$$\n",
     "- Maps vector of scores to probabilities\n",
@@ -86,7 +98,8 @@
     "## Loss function\n",
     "- Dissimilarity measure between model prediction and target\n",
     "- Squared error in regression problems: $l(\\mathbf{w}) = \\frac{1}{2} (\\hat{y} - y)^2$\n",
-    "- Cross-entropy in classification with n classes: $l(\\mathbf{w}) = -\\sum \\limits_{i=1}^{n} y_{i}log\\hat{y}_{i}$"
+    "- Cross-entropy in classification with n classes: $l(\\mathbf{w}) = -\\sum \\limits_{i=1}^{n} y_{i}log\\hat{y}_{i}$\n",
+    "- Dice loss: $l(\\mathbf{w}) = 1 - \\displaystyle \\frac{2\\hat{y}y}{\\hat{y} + y + \\gamma}$"
    ]
   },
   {
@@ -370,7 +383,8 @@
    "source": [
     "## U-Net <span style=\"font-size: 0.5em; font-weight: normal;\">(Ronneberger et al., 2015)</span>\n",
     "- A fully convolutional neural network designed for semantic segmentation\n",
-    "- Encoder-decoder architecture: the encoder learns an efficient representation from which the decoder builds a reconstruction "
+    "- Encoder-decoder architecture: the encoder learns an efficient representation from which the decoder builds a reconstruction\n",
+    "- Myriad of descendants, e.g. adopting residual blocks from ResNet or dense blocks from DenseNet"
    ]
   },
   {
@@ -386,6 +400,20 @@
     "- Dot product attention score: $$a(\\mathbf{q,k}_i) = \\mathbf{q^{\\top}k}_i$$\n",
     "- Attention weights: $$\\alpha(\\mathbf{q,k}_i) = \\mathrm{softmax}(a(\\mathbf{q,k}_i))$$\n",
     "- Attention pooling: $$\\mathrm{Attention}(\\mathbf{q},\\mathcal{D}) = \\sum \\limits_{i=1}^{m} \\alpha(\\mathbf{q,k}_i)\\mathbf{v}_i$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Ground truth labeling\n",
+    "- Done in Microscopy Image Browser leveraging the Segment Anything Model (SAM)\n",
+    "- Instance segmentation masks for mitochondria as 8-bit TIFF images where background pixels have intensity value 0 and mitochondria non-zero\n",
+    "- Magnifications 3000X/4000X/5000X. 128 images from Martin's MSc thesis. ~/Kristian/dataset/"
    ]
   }
  ],
